# fastberry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
example/: BENCHMARKS.md  README.md
example/django/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
example/django/catalog/: models.py  schemas.py  views.py
example/django/catalog/management/commands/: benchmark.py  seed.py
example/django/config/: settings.py  urls.py
example/fastapi/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
example/fastapi/app/: benchmark.py  db.py  main.py  models.py  schemas.py  seed.py
example/strawberry/: Dockerfile  README.md  asgi.py  benchmark.py  docker-compose.yml  requirements.txt
example/strawberry/app/: data.py  schema.py
example/strawberry_django/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
example/strawberry_django/catalog/: models.py  schema.py
example/strawberry_django/catalog/management/commands/: benchmark.py  seed.py
example/strawberry_django/config/: settings.py  urls.py
src/fastberry/: __init__.py  fastpath.py  list_provider.py  rest.py  rest_backends.py  rest_renderers.py  strawberry_django.py
tests/: conftest.py  test_fast_rest.py  test_fastpath.py  test_list_provider.py  test_rest.py  test_rest_labels.py  test_rest_renderers.py  test_rest_sqlalchemy.py  test_strawberry_django.py
