[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fastberry"
dynamic = ["version"]
description = "Performance helpers for strawberry-django: skip resolver overhead on sync Django."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Dávid Sárosi" },
]
keywords = ["strawberry", "graphql", "django", "performance", "strawberry-django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "strawberry-graphql>=0.200",
    "Django>=4.2",
]

[project.optional-dependencies]
# Read-only REST serialization (fastberry.rest) needs a fast JSON encoder.
rest = [
    "orjson>=3.9",
]
# The fast_strawberry_django wrapper needs strawberry-graphql-django.
graphql = [
    "strawberry-graphql-django>=0.20",
]
# Use fastberry.rest with the SQLAlchemy ORM instead of Django (e.g. FastAPI).
# Still needs the `rest` extra for orjson.
sqlalchemy = [
    "orjson>=3.9",
    "SQLAlchemy>=2.0",
]
dev = [
    "pytest>=8.0",
    "strawberry-graphql[debug-server]>=0.200",
    "strawberry-graphql-django>=0.20",
    "djangorestframework>=3.14",
    "orjson>=3.9",
    "SQLAlchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/davidsarosi92/fastberry"
Repository = "https://github.com/davidsarosi92/fastberry"
Issues = "https://github.com/davidsarosi92/fastberry/issues"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/fastberry/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fastberry"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/src/fastberry/_version.py",
]