[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fastberry"
dynamic = ["version"]
description = "Performance helpers that skip per-field GraphQL and REST serialization overhead on Django, DRF, and FastAPI/SQLAlchemy."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Dávid Sárosi" },
]
keywords = [
    "performance",
    "graphql",
    "rest",
    "strawberry",
    "strawberry-django",
    "django",
    "drf",
    "fastapi",
    "sqlalchemy",
    "orjson",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# The core package has no hard runtime dependencies. Each helper pulls only
# what it needs via an extra, so a REST/SQLAlchemy user never installs Django
# or strawberry, and a GraphQL user never installs orjson.
dependencies = []

[project.optional-dependencies]
# GraphQL: fast_path / FastPathExtension and the fast_strawberry_django wrapper.
graphql = [
    "strawberry-graphql>=0.200",
    "strawberry-graphql-django>=0.20",
    "Django>=4.2",
]
# Read-only REST serialization (fastberry.rest) on the Django ORM / DRF.
# Needs Django and a fast JSON encoder.
rest = [
    "orjson>=3.9",
    "Django>=4.2",
]
# Read-only REST serialization on the SQLAlchemy ORM instead of Django (e.g.
# FastAPI). No Django; still needs orjson for encoding.
sqlalchemy = [
    "orjson>=3.9",
    "SQLAlchemy>=2.0",
]
# Static analysis: Ruff (lint + format) and mypy (type check).
lint = [
    "ruff>=0.6",
    "mypy>=1.11",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "strawberry-graphql[debug-server]>=0.200",
    "strawberry-graphql-django>=0.20",
    "djangorestframework>=3.14",
    "orjson>=3.9",
    "SQLAlchemy>=2.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "nox>=2024.4",
    "pre-commit>=3.7",
    "pyright>=1.1.400",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/davidsarosi92/fastberry"
Repository = "https://github.com/davidsarosi92/fastberry"
Issues = "https://github.com/davidsarosi92/fastberry/issues"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.coverage.run]
source = ["fastberry"]
omit = ["*/_version.py"]  # auto-generated by hatch-vcs

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# RUF012: declarative `fields = [...]` / Meta class attributes are the schema
# idiom (FastRest, DRF, strawberry) — not accidental mutable state.
# S: bandit security checks are for library code; tests use bare asserts (S101)
# and demo creds, examples ship throwaway SECRET_KEY / random seeding.
"tests/*" = ["B", "RUF012", "S"]
"example/*" = ["RUF012", "S"]
"example/fastapi/*" = ["B008"]  # FastAPI's Depends() default-arg pattern

[tool.ruff.lint.isort]
known-first-party = ["fastberry"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
# Third-party ORM/framework libs (Django, strawberry, SQLAlchemy, DRF) are
# resolved lazily and not all ship complete type info; don't fail on them.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/fastberry/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fastberry"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/src/fastberry/_version.py",
]
